--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -9,8 +9,8 @@ crons = ["* * * * *"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "xugou_db"
-database_id = "32a2ca5f-3a77-4b08-965e-804612557880"
+database_name = "jiankong"
+database_id = "ea5db8f7-2840-4c74-bf78-ee3a8251b355"
 
 [version_metadata]
 binding = "CF_VERSION_METADATA"
